--- a/Client/src/ui/StockView.fxml
+++ b/Client/src/ui/StockView.fxml
@@ -17,6 +17,7 @@
 -->
 <!-- Start Main Window -->
 
+<?import java.net.URL?>
 <fx:root fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="765.0" prefWidth="999.0" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
        <SplitPane dividerPositions="0.6850152905198776" layoutY="40.0" minHeight="700.0" prefHeight="750.0" prefWidth="999.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
@@ -63,12 +64,12 @@
                         </AnchorPane>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="26.0" prefWidth="199.0" style="-fx-background-color: aliceblue;">
                            <children>
-                              <Button id="btnCheckOut" fx:id="checkOutButton" layoutX="7.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkOut" text="check out" AnchorPane.topAnchor="11.0" />
-                              <Button id="btnCheckIn" fx:id="CheckInButton" layoutX="93.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkIn" text="check in" AnchorPane.topAnchor="11.0" />
+                              <Button id="default-button" prefWidth="80" prefHeight="35" fx:id="checkOutButton" layoutX="7.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkOut" text="Check out" AnchorPane.topAnchor="11.0" />
+                              <Button id="default-button" prefWidth="80" prefHeight="35" fx:id="CheckInButton" layoutX="93.0" layoutY="11.0" mnemonicParsing="false" onAction="#checkIn" text="Check in" AnchorPane.topAnchor="11.0" />
                                <AnchorPane layoutY="59.0" prefHeight="251.0" prefWidth="294.0">
                                  <children>
                                     <Label layoutX="24.0" text="Manuelle Erfassung" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="0.0" />
-                                    <Button layoutX="205.0" layoutY="198.0" mnemonicParsing="false" onAction="#addItem" prefHeight="26.0" prefWidth="75.0" text="OK" AnchorPane.bottomAnchor="25.0" AnchorPane.rightAnchor="14.0" /> <!--defaultButton="true" excludec because of globallistener adds enter to barcoe -->
+                                    <Button layoutX="205.0" prefWidth="80" prefHeight="35" id="default-button" layoutY="208.0" mnemonicParsing="false" onAction="#addItem" text="OK" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="14.0" /> <!--defaultButton="true" excludec because of globallistener adds enter to barcoe -->
                                      <TextField fx:id="txtExpiryDate" layoutX="14.0" layoutY="165.0" prefHeight="26.0" prefWidth="267.0" promptText="Ablaufdatum" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
                                     <TextField fx:id="txtBatch" layoutX="14.0" layoutY="131.0" prefHeight="26.0" prefWidth="267.0" promptText="Batch / Lot" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
                                     <TextField fx:id="txtSeriennummer" layoutX="14.0" layoutY="97.0" prefHeight="26.0" prefWidth="267.0" promptText="Seriennummer" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
@@ -76,8 +77,8 @@
                                     <TextField fx:id="txtInput" layoutX="14.0" layoutY="30.0" prefHeight="26.0" prefWidth="267.0" promptText="Input" style="-fx-text-inner-color: white;" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="13.0" />
                                  </children>
                               </AnchorPane>
-                               <Button layoutX="248.0" layoutY="11.0" mnemonicParsing="false" onAction="#clearList" text="Clear" AnchorPane.topAnchor="11.0" />
-                              <Button layoutX="170.0" layoutY="11.0" mnemonicParsing="false" onAction="#deleteItem" text="Löschen" AnchorPane.topAnchor="11.0" />
+                               <Button layoutX="265.0" layoutY="11.0" id="default-button" prefWidth="80" prefHeight="35" mnemonicParsing="false" onAction="#clearList" text="Clear" AnchorPane.topAnchor="11.0" />
+                              <Button layoutX="179.0" layoutY="11.0" id="default-button" prefWidth="80" prefHeight="35" mnemonicParsing="false" onAction="#deleteItem" text="Löschen" AnchorPane.topAnchor="11.0" />
                            </children>
                         </AnchorPane>
                     </items>
@@ -88,8 +89,11 @@
       </SplitPane>
        <Pane layoutY="346.0" prefHeight="126.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
           <children>
-              <Button layoutX="14.0" layoutY="20.0" mnemonicParsing="false" onAction="#resetTrackedItems" text="Reset" textAlignment="RIGHT" AnchorPane.rightAnchor="932.9939002990723" AnchorPane.topAnchor="20.0" />
+              <Button prefWidth="80" prefHeight="35" layoutX="14.0" layoutY="20.0" id="default-button" mnemonicParsing="false" onAction="#resetTrackedItems" text="Reset" textAlignment="RIGHT" AnchorPane.rightAnchor="932.9939002990723" AnchorPane.topAnchor="20.0" />
           </children>
        </Pane>
    </children>
+    <stylesheets>
+        <URL value="@../resources/style.css" />
+    </stylesheets>
 </fx:root>
