--- a/Client/src/ui/CheckedInItemsView.fxml
+++ b/Client/src/ui/CheckedInItemsView.fxml
@@ -16,6 +16,7 @@ The data is shown in a table.</p>
 * @author Patrick Hirschi, patrick.hirschi@students.bfh.ch
 * @version 10-12-2014
 -->
+<?import java.net.URL?>
 <fx:root type="javafx.scene.layout.VBox" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="765.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml" >
     <children>
         <SplitPane dividerPositions="0.2" layoutY="40.0" prefHeight="306.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
@@ -50,8 +51,11 @@ The data is shown in a table.</p>
         </SplitPane>
         <AnchorPane layoutY="346.0" prefHeight="128.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
-                <Button id="btnBack" fx:id="backButton" mnemonicParsing="false" onAction="#backToStockView" text="Zurück" textAlignment="RIGHT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" ></Button>
+                <Button id="default-button" prefWidth="80" prefHeight="35" fx:id="backButton" mnemonicParsing="false" onAction="#searchCheckedInItems" text="Search" textAlignment="RIGHT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" ></Button>
             </children>
         </AnchorPane>
     </children>
+    <stylesheets>
+        <URL value="@../resources/style.css" />
+    </stylesheets>
 </fx:root>
