--- a/Client/src/ui/main.fxml
+++ b/Client/src/ui/main.fxml
@@ -24,7 +24,7 @@
          <children>
             <AnchorPane maxHeight="100.0" minHeight="100.0" prefHeight="100.0" prefWidth="823.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                    <Button id="big-yellow-button" fx:id="logoutBtn" contentDisplay="TOP" layoutX="756.0" layoutY="2.0" mnemonicParsing="false" onAction="#logout" text="Logout" textAlignment="RIGHT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
+                    <Button id="big-yellow-button" fx:id="logoutBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="756.0" layoutY="2.0" mnemonicParsing="false" onAction="#logout" text="Logout" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0">
                         <graphic>
                             <ImageView>
                                <image>
@@ -46,7 +46,7 @@
             </AnchorPane>
             <AnchorPane id="NavigationBar" layoutX="-6.0" layoutY="76.0" maxHeight="90.0" minHeight="90.0" prefHeight="90.0" prefWidth="823.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                 <children>
-                    <Button id="big-yellow-button" fx:id="openStockViewBtn" contentDisplay="TOP" layoutX="144.0" layoutY="3.0" maxHeight="80.0" maxWidth="120.0" minHeight="80.0" minWidth="120.0" mnemonicParsing="false" onAction="#openStockView" prefHeight="80.0" prefWidth="120.0" text="Stock" AnchorPane.leftAnchor="144.0">
+                    <Button id="big-yellow-button" fx:id="openStockViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onAction="#openStockView" text="Stock" AnchorPane.leftAnchor="14.0">
                         <graphic>
                             <ImageView>
                                <image>
@@ -55,7 +55,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button id="big-yellow-button" fx:id="openCheckinViewBtn" contentDisplay="TOP" layoutX="14.0" layoutY="3.0" maxHeight="80.0" maxWidth="120.0" minHeight="80.0" minWidth="120.0" mnemonicParsing="false" onAction="#openCheckedinView" prefHeight="80.0" prefWidth="120.0" text="Checkin" AnchorPane.leftAnchor="14.0">
+                    <Button id="big-yellow-button" fx:id="openCheckinViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="114.0" layoutY="8.0" mnemonicParsing="false" onAction="#openCheckedinView" text="Checkin" AnchorPane.leftAnchor="114.0">
                         <graphic>
                             <ImageView>
                                <image>
@@ -64,7 +64,7 @@
                             </ImageView>
                         </graphic>
                   </Button>
-                  <Button id="big-yellow-button" fx:id="openOrderViewBtn" contentDisplay="TOP" layoutX="272.0" layoutY="3.0" maxHeight="80.0" maxWidth="120.0" minHeight="80.0" minWidth="120.0" mnemonicParsing="false" onAction="#openOrderView" prefHeight="80.0" prefWidth="120.0" text="Order">
+                  <Button id="big-yellow-button" fx:id="openOrderViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="214.0" layoutY="8.0" mnemonicParsing="false" onAction="#openOrderView" text="Order"  AnchorPane.leftAnchor="214.0">
                       <graphic>
                           <ImageView>
                              <image>
@@ -73,7 +73,7 @@
                           </ImageView>
                       </graphic>
                   </Button>
-                  <Button id="big-yellow-button" fx:id="openPendingOrdersViewBtn" contentDisplay="TOP" layoutX="400.0" layoutY="2.0" mnemonicParsing="false" onAction="#openPendingOrdersView" prefHeight="82.0" prefWidth="159.0" text="Pending Orders">
+                  <Button id="big-yellow-button" fx:id="openPendingOrdersViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="314.0" layoutY="8.0" mnemonicParsing="false" onAction="#openPendingOrdersView" text="Pending"  AnchorPane.leftAnchor="314.0">
                       <graphic>
                           <ImageView>
                              <image>
