--- a/Client/src/ui/main.fxml
+++ b/Client/src/ui/main.fxml
@@ -20,7 +20,7 @@
 
 <AnchorPane minHeight="880.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainController">
     <children>
-      <AnchorPane fx:id="navigationHolderPane" maxHeight="165.0" minHeight="165.0" prefHeight="165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane fx:id="navigationHolderPane" maxHeight="165.0" minHeight="165.0" prefHeight="165.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" style="-fx-background-color: lightgrey;">
          <children>
             <AnchorPane maxHeight="100.0" minHeight="100.0" prefHeight="100.0" prefWidth="823.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
@@ -88,7 +88,6 @@
       </AnchorPane>
         <AnchorPane minHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="165.0">
            <children>
-            <Label text="A label text" />
                <VBox fx:id="vistaHolder" minHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
            </children>
         </AnchorPane>
