--- a/Client/src/ui/StockView.fxml
+++ b/Client/src/ui/StockView.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 
@@ -19,28 +18,24 @@ The data is shown in a table.</p>
 <?import java.net.URL?>
 <fx:root type="javafx.scene.layout.VBox" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="765.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml" >
     <children>
-        <SplitPane dividerPositions="0.2" layoutY="40.0" prefHeight="306.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+        <SplitPane dividerPositions="0.2" layoutY="40.0" prefHeight="506.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
             <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="254.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="504.0" prefWidth="254.0">
                     <children>
-                               <AnchorPane fx:id="mediInfoPane" minHeight="0.0" minWidth="0.0" prefHeight="656.0" prefWidth="254.0" style="-fx-background-color: aliceblue;">
+                               <AnchorPane fx:id="infoPane" minHeight="0.0" minWidth="0.0" prefHeight="656.0" prefWidth="254.0" style="-fx-background-color: aliceblue;">
                                     <children>
-                                        <ImageView fx:id="mediPicture" fitHeight="120.0" fitWidth="173.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@../media/mephadolor.png" />
-                                            </image>
-                                        </ImageView>
+
                                     </children>
                                 </AnchorPane>
                     </children>
                 </AnchorPane>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="304.0" prefWidth="400.0">
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="504.0" prefWidth="400.0">
                         <TreeTableView id="itemListData" fx:id="itemList" layoutX="-1.0" prefHeight="246.0" prefWidth="199.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                         </TreeTableView>
                     </AnchorPane>
             </items>
         </SplitPane>
-        <AnchorPane layoutY="346.0" prefHeight="128.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+        <AnchorPane layoutY="546.0" prefHeight="128.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
                 <Button id="default-button" prefWidth="80" prefHeight="35" fx:id="backButton" mnemonicParsing="false" onAction="#searchCheckedInItems" text="Search" textAlignment="RIGHT" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="7.0" ></Button>
             </children>
