--- a/Client/src/ui/main.fxml
+++ b/Client/src/ui/main.fxml
@@ -46,7 +46,7 @@
             </AnchorPane>
             <AnchorPane id="NavigationBar" layoutX="-6.0" layoutY="76.0" maxHeight="90.0" minHeight="90.0" prefHeight="90.0" prefWidth="823.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                 <children>
-                    <Button id="big-yellow-button" fx:id="openStockViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onAction="#openStockView" text="Stock" AnchorPane.leftAnchor="14.0">
+                    <Button id="big-yellow-button" fx:id="openHomeViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="14.0" layoutY="8.0" mnemonicParsing="false" onAction="#openHomeView" text="Home" AnchorPane.leftAnchor="14.0">
                         <graphic>
                             <ImageView>
                                <image>
@@ -55,7 +55,7 @@
                             </ImageView>
                         </graphic>
                     </Button>
-                    <Button id="big-yellow-button" fx:id="openCheckinViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="114.0" layoutY="8.0" mnemonicParsing="false" onAction="#openCheckedinView" text="Checkin" AnchorPane.leftAnchor="114.0">
+                    <Button id="big-yellow-button" fx:id="openStockViewBtn" prefWidth="90" prefHeight="70" contentDisplay="TOP" layoutX="114.0" layoutY="8.0" mnemonicParsing="false" onAction="#openStockView" text="Stock" AnchorPane.leftAnchor="114.0">
                         <graphic>
                             <ImageView>
                                <image>
