--- a/Client/src/ui/main.fxml
+++ b/Client/src/ui/main.fxml
@@ -104,9 +104,15 @@
             </AnchorPane>
          </children>
       </AnchorPane>
-        <AnchorPane minHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="165.0">
+        <AnchorPane minHeight="600.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="165.0">
            <children>
                <VBox fx:id="vistaHolder" minHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS" />
+           </children>
+        </AnchorPane>
+        <AnchorPane maxHeight="40.0" minHeight="40.0" prefHeight="40.0" prefWidth="823.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+           <children>
+              <ProgressIndicator fx:id="statusLineIndicator" layoutX="782.0" layoutY="7.0" prefHeight="25.0" prefWidth="29.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="10.0" />
+              <Label fx:id="statusLineLabel"  layoutX="30.0" layoutY="12.0" prefHeight="16.0" prefWidth="732.0" text="statusBarLabel" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="60.0" />
            </children>
         </AnchorPane>
     </children>
