--- a/Client/src/ui/ShipmentView.fxml
+++ b/Client/src/ui/ShipmentView.fxml
@@ -17,24 +17,20 @@
 <?import java.net.URL?>
 <fx:root type="javafx.scene.layout.VBox" fx:id="mainFrame" minHeight="-Infinity" minWidth="-Infinity" prefHeight="765.0" prefWidth="999.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml" >
     <children>
-        <SplitPane dividerPositions="0.1" layoutY="40.0" prefHeight="604.0" prefWidth="656.0" AnchorPane.bottomAnchor="126.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
-            <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="604.0" prefWidth="204.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="604.0" prefWidth="980.0">
                     <children>
-                        <AnchorPane fx:id="orderPane" minHeight="0.0" minWidth="0.0" prefHeight="656.0" prefWidth="204.0" style="-fx-background-color: aliceblue;">
-                            <children>
+                        <TreeTableView fx:id="orderTable" layoutX="14.0" layoutY="14.0" prefHeight="604.0" prefWidth="480.0">
 
-                            </children>
-                        </AnchorPane>
+                        </TreeTableView>
+                        <TreeView fx:id="treeView" layoutX="500.0" layoutY="14.0" prefHeight="534.0" prefWidth="350.0">
+
+                        </TreeView>
+                        <VBox fx:id="pdfBox" layoutX="855.0" layoutY="14.0" prefHeight="534.0" prefWidth="350.0">
+
+                        </VBox>
                     </children>
-                </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="604.0" prefWidth="450.0">
-                    <TreeTableView fx:id="orderTable" layoutX="14.0" layoutY="14.0" prefHeight="604.0" prefWidth="450.0">
 
-                    </TreeTableView>
                 </AnchorPane>
-            </items>
-        </SplitPane>
         <AnchorPane layoutY="546.0" prefHeight="128.0" prefWidth="656.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
             <children>
                 <Button id="default-button" prefWidth="80" prefHeight="35" fx:id="processButton" mnemonicParsing="false" text="Process" textAlignment="RIGHT" AnchorPane.rightAnchor="307.0" AnchorPane.topAnchor="7.0" ></Button>
