--- a/MediPrep/src/ui/AdditionalMedicView.fxml
+++ b/MediPrep/src/ui/AdditionalMedicView.fxml
@@ -12,38 +12,50 @@
 
 <fx:root prefHeight="800.0" prefWidth="1000.0" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-    <AnchorPane>
-    <Pane fx:id="InformationPane" prefHeight="300.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <ScrollPane layoutY="200.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="300.0">
-        <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="500.0" prefWidth="998.0" />
-        </content>
-      </ScrollPane>
-   <children>
-      <Label layoutX="14.0" layoutY="14.0" text="Weitere Medikamente">
-         <font>
-            <Font name="Lucida Sans Regular" size="32.0" />
-         </font>
-      </Label>
-      <Pane layoutX="26.0" layoutY="53.0" prefHeight="85.0" prefWidth="949.0">
-         <children>
-            <Label layoutX="15.0" layoutY="14.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
-         </children>
-      </Pane>
-      <Pane layoutX="38.0" layoutY="157.0" prefHeight="125.0" prefWidth="822.0">
-         <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Aktueller Patient:" />
-            <Label layoutX="165.0" layoutY="14.0" text="Nachnname, Vorname (geschlecht)" />
-            <Label layoutX="488.0" layoutY="14.0" text="Geburstdatum : 01.01.2000 / Alter: 15" />
-         </children>
-      </Pane>
-      <TableView fx:id="medicationsList" layoutX="6.0" layoutY="300.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="300.0">
-        <columns>
-          <TableColumn prefWidth="75.0" text="C1" />
-          <TableColumn prefWidth="75.0" text="C2" />
-        </columns>
-      </TableView>
-   </children>
-    </AnchorPane>
+        <AnchorPane>
+               <children>
+                  <Label layoutX="14.0" layoutY="14.0" text="Weitere Medikamente bereitstellen">
+                     <font>
+                        <Font name="Lucida Sans Regular" size="32.0" />
+                     </font>
+                  </Label>
+                  <Pane layoutX="26.0" layoutY="53.0" prefHeight="96.0" prefWidth="949.0">
+                     <children>
+                        <Label layoutX="15.0" layoutY="14.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/Profilbild.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/Profilbild.png" />
+                     </image>
+                  </ImageView>
+                     </children>
+                  </Pane>
+                  <Pane layoutX="38.0" layoutY="157.0" prefHeight="96.0" prefWidth="822.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" text="Aktueller Patient:" />
+                        <Label layoutX="165.0" layoutY="14.0" text="Nachnname, Vorname (geschlecht)" />
+                        <Label layoutX="488.0" layoutY="14.0" text="Geburstdatum : 01.01.2000 / Alter: 15" />
+                     </children>
+                  </Pane>
+                  <TableView fx:id="medicationsList" layoutX="3.0" layoutY="300.0" prefHeight="231.0" prefWidth="994.0" AnchorPane.bottomAnchor="269.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="300.0">
+                    <columns>
+                      <TableColumn prefWidth="75.0" text="C1" />
+                      <TableColumn prefWidth="75.0" text="C2" />
+                    </columns>
+                  </TableView>
+            <Label layoutX="22.0" layoutY="274.0" text="Medikamente" />
+            <Label layoutX="21.0" layoutY="543.0" text="Reserve" />
+            <TableView fx:id="medicationsListReserve" layoutX="22.0" layoutY="569.0" prefHeight="129.0" prefWidth="958.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="569.0">
+               <columns>
+                  <TableColumn prefWidth="75.0" text="C1" />
+                  <TableColumn prefWidth="75.0" text="C2" />
+               </columns>
+            </TableView>
+               </children>
+        </AnchorPane>
     </children>
 </fx:root>
