--- a/MediPrep/src/ui/AdditionalMedicView.fxml
+++ b/MediPrep/src/ui/AdditionalMedicView.fxml
@@ -10,6 +10,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
+<!--
+* Bern University of Applied Sciences</br>
+* BSc Medical Informatics</br>
+* Module Bachelorthesis</br>
+*
+*<p>List of additional medications for a patient.</p>
+*
+ * @author Johannes Gnaegi, johannes.gnaegi@students.bfh.ch
+ * @version 26.03.2015
+-->
 <fx:root prefHeight="800.0" prefWidth="1000.0" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane>
@@ -19,42 +29,40 @@
                         <Font name="Lucida Sans Regular" size="32.0" />
                      </font>
                   </Label>
-                  <Pane layoutX="26.0" layoutY="53.0" prefHeight="96.0" prefWidth="949.0">
+                  <Pane layoutX="26.0" layoutY="53.0" prefHeight="107.0" prefWidth="949.0">
                      <children>
-                        <Label layoutX="15.0" layoutY="14.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
-                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                        <Label layoutX="47.0" layoutY="9.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/image/Profilbild.png" />
+                        <Image url="@../resources/image/time.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="62.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../resources/image/Profilbild.png" />
+                        <Image url="@../resources/image/ok_icon.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="56.0" layoutY="48.0" text="Dieses Medikament wurde noch nicht gerichtet." />
+                  <Label layoutX="56.0" layoutY="79.0" text="Dieses Medikament wurde bereits bereitgestellt." />
+                  <ImageView fitHeight="75.0" fitWidth="26.0" layoutX="18.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/info.png" />
                      </image>
                   </ImageView>
                      </children>
                   </Pane>
-                  <Pane layoutX="38.0" layoutY="157.0" prefHeight="96.0" prefWidth="822.0">
+                  <Pane layoutX="38.0" layoutY="173.0" prefHeight="96.0" prefWidth="822.0">
                      <children>
                         <Label layoutX="14.0" layoutY="14.0" text="Aktueller Patient:" />
-                        <Label layoutX="165.0" layoutY="14.0" text="Nachnname, Vorname (geschlecht)" />
-                        <Label layoutX="488.0" layoutY="14.0" text="Geburstdatum : 01.01.2000 / Alter: 15" />
+                        <Label fx:id="lblNameGender" layoutX="165.0" layoutY="14.0" text="Nachnname, Vorname (geschlecht)" />
+                        <Label fx:id="lblBirthdate" layoutX="488.0" layoutY="14.0" text="Geburstdatum : 01.01.2000 / Alter: 15" />
+                  <Label fx:id="lblPatInfo" layoutX="165.0" layoutY="48.0" text="Infos:" />
                      </children>
                   </Pane>
-                  <TableView fx:id="medicationsList" layoutX="3.0" layoutY="300.0" prefHeight="231.0" prefWidth="994.0" AnchorPane.bottomAnchor="269.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="300.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="C1" />
-                      <TableColumn prefWidth="75.0" text="C2" />
-                    </columns>
-                  </TableView>
+                  <TableView fx:id="medicationsList" layoutX="3.0" layoutY="300.0" prefHeight="231.0" prefWidth="994.0" AnchorPane.bottomAnchor="269.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="300.0" />
             <Label layoutX="22.0" layoutY="274.0" text="Medikamente" />
             <Label layoutX="21.0" layoutY="543.0" text="Reserve" />
-            <TableView fx:id="medicationsListReserve" layoutX="22.0" layoutY="569.0" prefHeight="129.0" prefWidth="958.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="569.0">
-               <columns>
-                  <TableColumn prefWidth="75.0" text="C1" />
-                  <TableColumn prefWidth="75.0" text="C2" />
-               </columns>
-            </TableView>
+            <TableView fx:id="medicationsListReserve" layoutX="22.0" layoutY="569.0" prefHeight="129.0" prefWidth="958.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="569.0" />
                </children>
         </AnchorPane>
     </children>
