--- a/Client/src/resources/style.css
+++ b/Client/src/resources/style.css
@@ -29,3 +29,15 @@
 #default-button Text {
     -fx-effect: dropshadow( one-pass-box , rgba(255,255,255,0.5) , 0, 0.0 , 0 , 1);
 }
+.tree-table-cell {
+    -fx-background-color: -fx-table-cell-border-color, -fx-control-inner-background;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+    -fx-text-fill: -fx-text-inner-color;
+}
+.tree-table-row-cell:selected {
+    -fx-border-color: lightskyblue;
+    -fx-border-width: 2px,2px,2px,2px;
+    -fx-background-color: lightblue;
+    -fx-font-weight: bold;
+}
