--- a/MediPrep/src/ui/main.fxml
+++ b/MediPrep/src/ui/main.fxml
@@ -17,6 +17,7 @@
  * @author Johannes Gnaegi, johannes.gnaegi@students.bfh.ch
  * @version 26.03.2015
 -->
+
 <AnchorPane minHeight="880.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.MainController">
     <children>
       <AnchorPane fx:id="navigationHolderPane" maxHeight="165.0" minHeight="85.0" prefHeight="85.0" prefWidth="823.0" style="-fx-background-color: lightgrey;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -34,13 +35,15 @@
                     </Button>
                     <Label id="lblLocationInfo" fx:id="locationField" layoutX="239.0" layoutY="1.0" prefHeight="31.0" prefWidth="135.0" text="StationA" textFill="#2b5bae" AnchorPane.leftAnchor="248.0" AnchorPane.topAnchor="6.0" />
                     <Label id="lblUserName" fx:id="userField" layoutX="71.0" prefHeight="31.0" prefWidth="159.0" text="User: zehnp1" textFill="#2b5bae" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="5.0" />
-                    <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="71.0" layoutY="31.0" prefHeight="31.0" prefWidth="235.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="36.0" />
+                    <Label id="lblCurrentDate" fx:id="dateTimeField" layoutX="440.0" layoutY="6.0" prefHeight="31.0" prefWidth="235.0" text="27.10.2014; 15:01 Uhr" textFill="#2b5bae" AnchorPane.leftAnchor="440.0" AnchorPane.topAnchor="6.0" />
             
                   <ImageView fitHeight="63.0" fitWidth="60.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="9.0" AnchorPane.topAnchor="8.0">
                      <image>
                         <Image fx:id="imgProfilePicture" url="@../resources/image/Profilbild.png" />
                      </image>
                   </ImageView>
+                  <Label layoutX="248.0" layoutY="60.0" text="Aktueller Patient:" />
+                  <Label fx:id="lblSelectedPatientInfo" layoutX="440.0" layoutY="60.0" text="Label" />
                </children>
             </AnchorPane>
          </children>
