--- a/MediPrep/src/ui/AdditionalMedicView.fxml
+++ b/MediPrep/src/ui/AdditionalMedicView.fxml
@@ -21,7 +21,7 @@
  * @version 26.03.2015
 -->
 
-<fx:root prefHeight="800.0" prefWidth="1000.0" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root prefHeight="755.0" prefWidth="823.0" type="javafx.scene.layout.VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane>
                <children>
@@ -30,29 +30,63 @@
                         <Font name="Lucida Sans Regular" size="32.0" />
                      </font>
                   </Label>
-                  <Pane layoutX="26.0" layoutY="53.0" prefHeight="107.0" prefWidth="949.0">
+                  <Pane layoutX="26.0" layoutY="69.0" prefHeight="102.0" prefWidth="949.0">
                      <children>
-                        <Label layoutX="47.0" layoutY="9.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
-                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+                        <Label layoutX="47.0" layoutY="3.0" text="Entsprechendes Medikament scannen. Falls dies nicht möglich ist, Erfassen über anwählen des entsprechenden Medikaments." />
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="604.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/image/time.png" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="18.0" layoutY="74.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="26.0" fitWidth="29.0" layoutX="604.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/image/ok_icon.png" />
                      </image>
                   </ImageView>
-                  <Label layoutX="56.0" layoutY="48.0" text="Dieses Medikament wurde noch nicht gerichtet." />
-                  <Label layoutX="56.0" layoutY="79.0" text="Dieses Medikament wurde bereits bereitgestellt." />
-                  <ImageView fitHeight="75.0" fitWidth="26.0" layoutX="18.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                  <Label layoutX="642.0" layoutY="37.0" text="Dieses Medikament wurde noch nicht gerichtet." />
+                  <Label layoutX="642.0" layoutY="69.0" text="Dieses Medikament wurde bereits bereitgestellt." />
+                  <ImageView fitHeight="75.0" fitWidth="26.0" layoutX="9.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../resources/image/info.png" />
                      </image>
                   </ImageView>
+                  <Label layoutX="12.0" layoutY="35.0" prefHeight="16.0" prefWidth="125.0" text="Status Verordnung:">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="143.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/play.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="143.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/paused.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="269.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/stopped.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="269.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../resources/image/update.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="469.0" layoutY="37.0" prefHeight="16.0" prefWidth="133.0" text="Status Medikament:">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="176.0" layoutY="37.0" text="offen" />
+                  <Label layoutX="176.0" layoutY="69.0" text="pausiert" />
+                  <Label layoutX="302.0" layoutY="37.0" text="gestoppt" />
+                  <Label layoutX="302.0" layoutY="69.0" text="geändert" />
                      </children>
                   </Pane>
-                  <Pane layoutX="38.0" layoutY="173.0" prefHeight="96.0" prefWidth="822.0">
+                  <Pane layoutX="20.0" layoutY="186.0" prefHeight="74.0" prefWidth="822.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="186.0">
                      <children>
                         <Label layoutX="14.0" layoutY="14.0" text="Aktueller Patient:" />
                         <Label fx:id="lblNameGender" layoutX="165.0" layoutY="14.0" text="Nachnname, Vorname (geschlecht)" />
@@ -60,10 +94,12 @@
                   <Label fx:id="lblPatInfo" layoutX="165.0" layoutY="48.0" text="Infos:" />
                      </children>
                   </Pane>
-                  <TableView fx:id="medicationsList" layoutX="3.0" layoutY="300.0" prefHeight="235.0" prefWidth="960.0" AnchorPane.bottomAnchor="265.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="300.0" />
-            <Label layoutX="22.0" layoutY="274.0" text="Medikamente" />
+                  <TableView fx:id="preparedMedicationTableView" layoutX="573.0" layoutY="294.0" prefHeight="440.0" prefWidth="392.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="295.0" />
+            <Label layoutX="22.0" layoutY="274.0" text="Verordnungen" />
             <Label layoutX="21.0" layoutY="538.0" text="Reserve" />
-            <TableView fx:id="medicationsListReserve" layoutX="22.0" layoutY="560.0" prefHeight="225.0" prefWidth="960.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="555.0" />
+            <TableView fx:id="prescriptionTableViewReserve" layoutX="22.0" layoutY="563.0" prefHeight="172.0" prefWidth="548.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="407.0" AnchorPane.topAnchor="563.0" />
+            <TableView fx:id="prescriptionTableView" layoutX="20.0" layoutY="295.0" prefHeight="236.0" prefWidth="548.0" AnchorPane.bottomAnchor="224.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="407.0" AnchorPane.topAnchor="295.0" />
+            <Label layoutX="578.0" layoutY="274.0" text="Medikamente" AnchorPane.bottomAnchor="465.0" AnchorPane.rightAnchor="316.0" />
                </children>
         </AnchorPane>
     </children>
